add swagger.security api_key & revise isAdmin
